# jcli

./: .gitignore  LICENSE.md  README.md  dub.sdl  dub.selections.json  meson.build
.github/workflows/: ensure_amalgamation.yaml  examples.yaml  test_examples.yaml  test_ldc.yaml  unittests.yaml
examples/: README.md  test.d  test_all.ps1
examples/00-basic-usage/: dub.sdl
examples/00-basic-usage-default-command/: dub.sdl
examples/00-basic-usage-default-command/source/: app.d  commands.d
examples/00-basic-usage/source/: commands.d
examples/01-named-sub-commands/: dub.selections.json
examples/01-named-sub-commands/source/: commands.d
examples/02-shorthand-longhand-args/: dub.selections.json
examples/02-shorthand-longhand-args/source/: commands.d
examples/03-inheritence-base-commands/source/: commands.d
examples/04-custom-arg-binders/: dub.sdl
examples/04-custom-arg-binders/source/: app.d  binders.d  commands.d
examples/05-built-in-binders/source/: app.d  commands.d
examples/05-dependency-injection/source/: app.d  commands.d  services.d
examples/06-configuration/: .gitignore  dub.sdl  dub.selections.json
examples/06-configuration/source/: app.d  commands.d  config.d
examples/06-result-with-fail-code/source/: commands.d
examples/07-text-buffer-table/: .gitignore  dub.sdl
examples/07-text-buffer-table/source/: app.d  commands.d
examples/08-arg-binder-validation/: dub.sdl  dub.selections.json
examples/08-arg-binder-validation/source/: app.d  commands.d
examples/09-raw-unparsed-arg-list/source/: commands.d
examples/10-argument-options/source/: app.d  commands.d
examples/10-case-sensitive-args/source/: commands.d
new_examples/: test.d
new_examples/across_modules/: dub.sdl
new_examples/across_modules/source/: commands.d  main.d
new_examples/introspection/: dub.sdl  main.d
new_examples/most_simple/: dub.sdl  main.d
new_examples/tokenizer/: dub.sdl  main.d
new_examples/top_down/: dub.sdl  main.d
single-file/: jcli.d
source/: jcli.d
source/jaster/cli/: ansi.d  binder.d  commandhelptext.d  commandparser.d  config.d  core.d  example.d  helptext.d  internal.d  package.d  parser.d  resolver.d  result.d  shell.d  tests.d  text.d  udas.d  userio.d  util.d
source/jaster/cli/adapters/config/: asdf.d
source/jaster/cli/infogen/: actions.d  datatypes.d  gen.d  package.d  udas.d
source/jaster/cli/views/: bash_complete.d
source/jcli/: cli.d  package.d
subprojects/argbinder/: argbinder-test-library  dub.sdl  meson.build
subprojects/argbinder/source/jcli/argbinder/: binder.d  package.d
subprojects/argparser/: dub.sdl  meson.build
subprojects/argparser/source/jcli/argparser/: package.d  parser.d  tokenizer.d
subprojects/autocomplete/: dub.sdl  meson.build
subprojects/autocomplete/source/jcli/autocomplete/: complete.d  package.d
subprojects/commandgraph/: dub.sdl  meson.build
subprojects/commandgraph/source/jcli/commandgraph/: cli.d  graph.d  internal.d  package.d  wrapper.d
subprojects/commandparser/: dub.sdl  meson.build
subprojects/commandparser/source/jcli/commandparser/: package.d  parser.d
subprojects/core/: dub.sdl  meson.build
subprojects/core/source/jcli/core/: flags.d  package.d  pattern.d  result.d  udas.d  utils.d
subprojects/helptext/: dub.sdl  dub.selections.json  meson.build
subprojects/helptext/source/jcli/helptext/: helptext.d  package.d
subprojects/introspect/: dub.sdl  meson.build
subprojects/introspect/source/jcli/introspect/: data.d  flags.d  gather.d  groups.d  package.d
subprojects/resolver/: dub.sdl  dub.selections.json  meson.build
subprojects/resolver/source/jcli/resolver/: package.d  resolver.d
subprojects/text/: dub.sdl  meson.build
subprojects/text/source/: jansi.d
subprojects/text/source/jcli/text/: buffer.d  common.d  console.d  helptext.d  layout.d  package.d
subprojects/text/source/jcli/text/widgets/: border.d  package.d  shortcuts.d  text.d
tools/amalgamator/: .gitignore  dub.sdl
tools/amalgamator/source/: app.d
views/: bash_completion.sh
